@@ -1,6 +1,8 @@
 package rbasamoyai.createbigcannons.munitions;
 
+import java.util.Iterator;
 import java.util.Map;
+import java.util.WeakHashMap;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -59,6 +61,7 @@ public abstract class AbstractCannonProjectile extends Projectile implements Syn
 	protected BlockState lastPenetratedBlock = Blocks.AIR.defaultBlockState();
 	protected boolean removeNextTick = false;
 	protected int localSoundCooldown;
+	protected WeakHashMap<Entity, Integer> untouchableEntities = new WeakHashMap<>();
 
 	protected AbstractCannonProjectile(EntityType<? extends AbstractCannonProjectile> type, Level level) {
 		super(type, level);
@@ -121,6 +124,15 @@ public abstract class AbstractCannonProjectile extends Projectile implements Syn
 				}
 				this.setYRot(lerpRotation(this.yRotO, this.getYRot()));
 				this.setXRot(lerpRotation(this.xRotO, this.getXRot()));
+			}
+
+			for (Iterator<Map.Entry<Entity, Integer>> iter = this.untouchableEntities.entrySet().iterator(); iter.hasNext(); ) {
+				Map.Entry<Entity, Integer> entry = iter.next();
+				if (entry.getKey().isRemoved() || entry.getValue() > 0 && entry.getValue() - 1 == 0) {
+					iter.remove();
+				} else if (entry.getValue() > 0) {
+					entry.setValue(entry.getValue() - 1);
+				}
 			}
 
 			if (this.inFluidTime > 0)
@@ -537,7 +549,25 @@ public abstract class AbstractCannonProjectile extends Projectile implements Syn
 
 	public void setChargePower(float power) {}
 
-	@Override public boolean canHitEntity(Entity entity) { return super.canHitEntity(entity) && !(entity instanceof Projectile); }
+	@Override
+	public boolean canHitEntity(Entity entity) {
+		if (!super.canHitEntity(entity))
+			return false;
+		if (entity instanceof Projectile)
+			return false; // TODO better detection for interception?
+		return !this.untouchableEntities.containsKey(entity);
+	}
+
+	public void addUntouchableEntity(Entity entity, int duration) {
+		if (entity.isRemoved())
+			return;
+		if (duration < 1)
+			throw new IllegalArgumentException("Use #addAlwaysUntouchableEntity when duration < 1 (was " + duration + ")");
+		this.untouchableEntities.put(entity, duration);
+	}
+
+	public void addAlwaysUntouchableEntity(Entity entity) { this.untouchableEntities.put(entity, -1); }
+	public void removeUntouchableEntity(Entity entity) { this.untouchableEntities.remove(entity); }
 
 	public boolean canLingerInGround() { return false; }
 
